; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Mupen64Plus/png/extr_pngwutil.c_png_write_pHYs.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Mupen64Plus/png/extr_pngwutil.c_png_write_pHYs.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [18 x i8] c"in png_write_pHYs\00", align 1
@PNG_RESOLUTION_LAST = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [38 x i8] c"Unrecognized unit type for pHYs chunk\00", align 1
@png_pHYs = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @png_write_pHYs(i32 %0, i32 %1, i32 %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca [9 x i64], align 16
  store i32 %0, i32* %5, align 4
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %10 = call i32 @png_debug(i32 1, i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str, i64 0, i64 0))
  %11 = load i32, i32* %8, align 4
  %12 = load i32, i32* @PNG_RESOLUTION_LAST, align 4
  %13 = icmp sge i32 %11, %12
  br i1 %13, label %14, label %17

14:                                               ; preds = %4
  %15 = load i32, i32* %5, align 4
  %16 = call i32 @png_warning(i32 %15, i8* getelementptr inbounds ([38 x i8], [38 x i8]* @.str.1, i64 0, i64 0))
  br label %17

17:                                               ; preds = %14, %4
  %18 = getelementptr inbounds [9 x i64], [9 x i64]* %9, i64 0, i64 0
  %19 = load i32, i32* %6, align 4
  %20 = call i32 @png_save_uint_32(i64* %18, i32 %19)
  %21 = getelementptr inbounds [9 x i64], [9 x i64]* %9, i64 0, i64 0
  %22 = getelementptr inbounds i64, i64* %21, i64 4
  %23 = load i32, i32* %7, align 4
  %24 = call i32 @png_save_uint_32(i64* %22, i32 %23)
  %25 = load i32, i32* %8, align 4
  %26 = sext i32 %25 to i64
  %27 = getelementptr inbounds [9 x i64], [9 x i64]* %9, i64 0, i64 8
  store i64 %26, i64* %27, align 16
  %28 = load i32, i32* %5, align 4
  %29 = load i32, i32* @png_pHYs, align 4
  %30 = getelementptr inbounds [9 x i64], [9 x i64]* %9, i64 0, i64 0
  %31 = call i32 @png_write_complete_chunk(i32 %28, i32 %29, i64* %30, i32 9)
  ret void
}

declare dso_local i32 @png_debug(i32, i8*) #1

declare dso_local i32 @png_warning(i32, i8*) #1

declare dso_local i32 @png_save_uint_32(i64*, i32) #1

declare dso_local i32 @png_write_complete_chunk(i32, i32, i64*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
